# gen-secp

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: app.js  index.html  style.css
docs/python/: app.py
gen_secp/: core.py  main.py
