[project]
name = "gen-secp"
version = "0.1.5"
description = "Generate secp256k1 keypair CLI"
requires-python = ">=3.13"
dependencies = []
license = {text = "MIT"}
authors = [{name = "tonidy", email = "toni_d_y@live.com"}]
readme = "README.md"

[project.urls]
repository = "https://github.com/tonidy/gen-secp"
issues = "https://github.com/tonidy/gen-secp/issues"

[project.optional-dependencies]
coincurve = [
  "coincurve>=21.0.0"
]

[project.scripts]
genkey = "gen_secp.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["gen_secp"]

